[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/slime.png" type="Texture" id=1]
[ext_resource path="res://assets/spikes.png" type="Texture" id=2]
[ext_resource path="res://assets/SupermercadoOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://assets/SpeedySlimeForReal.mp3" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.27451, 0.317647, 0.231373, 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.133333, 0.301961, 0.176471, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.101961, 0.235294, 0.137255, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.356863, 0.207843, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="DynamicFont" id=6]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.654902, 0.298039, 0.172549, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.654902, 0.243137, 0.141176, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.654902, 0.356863, 0.207843, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31
corner_radius_bottom_right = 31
corner_radius_bottom_left = 31

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.345098, 0.407843, 0.462745, 1 )
corner_radius_top_left = 31
corner_radius_top_right = 31

[sub_resource type="DynamicFont" id=11]
size = 17
font_data = ExtResource( 3 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.7818
margin_right = 1.7818
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 654.0
margin_bottom = 462.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="slime" type="Sprite" parent="."]
position = Vector2( 466.527, 163.79 )
rotation = 0.434511
scale = Vector2( 4.12873, 3.94663 )
texture = ExtResource( 1 )

[node name="spikes" type="Sprite" parent="."]
position = Vector2( 354.237, 390.922 )
scale = Vector2( 2.40595, 1.79346 )
texture = ExtResource( 2 )

[node name="spikes2" type="Sprite" parent="."]
position = Vector2( 507.418, 390.031 )
scale = Vector2( 2.40595, 1.79346 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 639.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
text = "Speedy Slime"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 21.5274
margin_top = 112.582
margin_right = 180.527
margin_bottom = 186.582
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 21.527
margin_top = 199.89
margin_right = 180.527
margin_bottom = 273.89
focus_mode = 0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 6 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 20.8787
margin_top = 296.657
margin_right = 203.879
margin_bottom = 449.657
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2"]
margin_left = -0.943878
margin_top = 3.77551
margin_right = 185.056
margin_bottom = 156.776
custom_fonts/font = SubResource( 11 )
text = "Move: AD / Arrow Keys
Jump: Space / Click
Hold Jump to charge a bigger jump
Reset: R
Back to Menu: Esc"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="Music" type="Button" parent="."]
margin_left = 527.0
margin_top = 14.8775
margin_right = 622.0
margin_bottom = 45.8775
text = "Toggle Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="Button" parent="."]
margin_left = 529.245
margin_top = 55.2862
margin_right = 624.245
margin_bottom = 86.2862
text = "Toggle SFX"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="SFX" to="." method="_on_SFX_pressed"]
